gccida/c0/reversed_comparison_code
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reversed_comparison_code/src/jump.c:1228:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  reversed_comparison_code( rtx comparison, rtx insn) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reversed_comparison_code/src/jump.c:1232:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)comparison, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reversed_comparison_code/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reversed_comparison_code/src/jump.c:1232:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)comparison, 
             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reversed_comparison_code/src/obj/jump.o] Error 1
